--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
           python-version: 3.x
 
       - name: Install dependencies
-        run: pip install selenium requests futures eventlet beautifulsoup4
+        run: pip install selenium requests futures eventlet beautifulsoup4 pytz
 
       - name: Run iptv
         run: python ${{ github.workspace }}/gw.py
