--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: gwzb
 
 on:
   schedule:
-    - cron: '0 */3 * * *'
+    - cron: '0 19,22,1,4,7,10,13,16 * * *'
   workflow_dispatch:
   # push:
   #   branches:
