--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,8 @@ name: gwzb
 
 on:
   schedule:
-    - cron: '0 16,18,20,22,0,2,4,6,8,10,12,14 * * *'
+    - cron: '0 * * * *'
+
 
   workflow_dispatch:
   # push:
